--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -106,7 +106,7 @@
       {{projeto.autorizado.user.get_full_name}}
     </a>
   {% else %}
-    aguardando autorização
+    &lt;&lt;aguardando autorização&gt;&gt;
   {% endif %}
 
 
