--- a/projetos/templates/projetos/bancas_criar.html
+++ b/projetos/templates/projetos/bancas_criar.html
@@ -57,6 +57,9 @@
       Local: <input name="local" type="text" size="48"/><br>
       <br>
 
+      Link de Vídeo-conferência: <input name="link" type="text" size="40"/><br>
+      <br>
+
       Membro 1 da Banca:
       <select name="membro1" id="membro1" title="Selecione membro da banca">
           <option disabled selected value> -- selecione um membro da banca -- </option>
