--- a/projetos/templates/projetos/bancas_editar.html
+++ b/projetos/templates/projetos/bancas_editar.html
@@ -46,21 +46,24 @@
       Organização: <label id="organizacao" name="organizacao">{{banca.projeto.empresa}}</label><br>
       Orientador: <label id="orientador" name="orientador">{{banca.projeto.orientador}}</label><br>
 
-      <br>
+      <br>{{banca.startDate|date:'d/m/Y H:i'}}
       <div >
-        Inicio: <input id="inicio" type="datetime-local" name="inicio">
+        Inicio: <input id="inicio" type="datetime-local" name="inicio" value="{{banca.startDate|date:'Y-m-d\TH:i:s'}}">
         &nbsp;&nbsp;&nbsp;&nbsp;
-        Fim: <input id="fim" type="datetime-local" name="fim">
+        Fim: <input id="fim" type="datetime-local" name="fim" value="{{banca.endDate|date:'Y-m-d\TH:i:s'}}">
       </div><br>
 
-      Local: <input name="local" type="text" size="50"/><br>
+      Local: <input name="local" type="text" size="50" value="{{banca.location}}"/><br>
+      <br>
+
+      Link de Vídeo-conferência: <input name="link" type="text" size="40" value="{{banca.link}}"/><br>
       <br>
 
       Membro 1 da Banca:
       <select name="membro1" id="membro1" title="Selecione membro da banca">
           <option disabled selected value> -- selecione um membro da banca -- </option>
           {% for professor in pessoas %}
-            <option value="{{professor.id}}">
+            <option value="{{professor.id}}" {% if professor.id == banca.membro1.id %}selected{% endif %}>
               {{professor}}
             </option>  
           {% endfor %}
@@ -70,7 +73,7 @@
       <select name="membro2" id="membro2" title="Selecione membro da banca">
           <option disabled selected value> -- selecione um membro da banca -- </option>
           {% for professor in pessoas %}
-            <option value="{{professor.id}}">
+            <option value="{{professor.id}}" {% if professor.id == banca.membro2.id %}selected{% endif %}>
               {{professor}}
             </option>  
           {% endfor %}
@@ -80,7 +83,7 @@
       <select name="membro3" id="membro3" title="Selecione membro da banca">
           <option disabled selected value> -- selecione um membro da banca -- </option>
           {% for professor in pessoas %}
-            <option value="{{professor.id}}">
+            <option value="{{professor.id}}" {% if professor.id == banca.membro3.id %}selected{% endif %}>
               {{professor}}
             </option>  
           {% endfor %}
