Filtro para ver bancas e dinamicas, proximas e antigas

--- a/projetos/templates/index_professor.html
+++ b/projetos/templates/index_professor.html
@@ -10,7 +10,7 @@
     <h5>Agendamentos</h5>
     <ul>
         <a href="{% url 'bancas_index' %}"><li>Bancas</li></a>
-        <a href="{% url 'dinamicas' %}"><li>Dinâmicas</li></a>
+        <a href="{% url 'dinamicas' 'proximas' %}"><li>Dinâmicas</li></a>
     </ul>
 
     <h5>Projetos</h5>
