--- a/projetos/templates/projetos/calendario.html
+++ b/projetos/templates/projetos/calendario.html
@@ -28,6 +28,12 @@
     }
   </script>
 
+  <script>
+    $(document).ready(function(){
+      $('[data-toggle="tooltip"]').tooltip();
+    });
+  </script>
+
 {% endblock %}
 
 {% block content %}
@@ -39,11 +45,44 @@
 
   &nbsp;Semestre: [<span id="primeiro_semestre">1</span>/<span id="segundo_semestre">2</span>]
 
+  {% comment %}
+      (1, 'aluno'),
+      (2, 'professor'),
+      (3, 'parceiro'),
+      (4, 'administrador'),
+  {% endcomment %}
+
+  {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+    <br><span style="font-size:20px" data-toggle="tooltip" data-html="true" animation="true" title=
+    "O semestre da coordenação vai de Março à Agosto e de Setembro a Fevereiro">
+      Coordenação:
+    </span>
+    {% for evento in coordenacao|dictsort:"endDate" %} {% comment %} O certo era ser uma função isso. {% endcomment %}
+      <span class="coordenacao" data-ano="{{evento.endDate.year}}" data-mes="{{evento.endDate.month}}" >
+        {% ifchanged evento.get_title evento.get_semester evento.endDate.year %}   
+          <br><font style="color:{{evento.get_color}}">&#9608;</font> {{evento.get_title}}:
+          {% if evento.startDate == evento.endDate %} 
+            {{evento.endDate.day}}/{{evento.endDate.month}}/{{evento.endDate.year}}
+          {% else %}
+            {{evento.startDate.day}}/{{evento.startDate.month}}/{{evento.endDate.year}} à {{evento.endDate.day}}/{{evento.endDate.month}}/{{evento.endDate.year}}
+          {% endif %}
+        {% else %}
+          ; {{evento.endDate.day}}/{{evento.endDate.month}}/{{evento.endDate.year}}
+        {% endifchanged %}
+      </span>
+    {% endfor %}
+  {% endif %}
+
+  {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+    <br><br><span style="font-size:20px">
+      Alunos:
+    </span>
+  {% endif %}
   {% for evento in eventos|dictsort:"endDate" %}
     {% if evento.get_title != "Feriado" and evento.get_title != "Aula Cancelada" %}
       <span class="ano{{evento.endDate.year}} ano">
         <span class="semestre" data-mes="{{evento.endDate.month}}">
-          {% ifchanged evento.get_title evento.endDate.year %}   
+          {% ifchanged evento.get_title evento.get_semester evento.endDate.year %}   
             <br><font style="color:{{evento.get_color}}">&#9608;</font> {{evento.get_title}}:
             {% if evento.startDate == evento.endDate %} 
               {{evento.endDate.day}}/{{evento.endDate.month}}
@@ -61,7 +100,7 @@
   {% for feedback in feedbacks|dictsort:"endDate" %}
     <span class="ano{{feedback.endDate.year}} ano">
       <span class="semestre" data-mes="{{feedback.endDate.month}}">
-        {% ifchanged feedback.get_title feedback.endDate.year %} 
+        {% ifchanged feedback.get_title feedback.get_semester feedback.endDate.year %} 
           <br><font style="color:{{feedback.get_color}}">&#9608;</font> {{feedback.get_title}}: 
           {{feedback.endDate.day}}/{{feedback.endDate.month}}
         {% else %}
@@ -74,7 +113,7 @@
   {% for quinzenal in quinzenais|dictsort:"endDate" %}
     <span class="ano{{quinzenal.endDate.year}} ano">
       <span class="semestre" data-mes="{{quinzenal.endDate.month}}">
-        {% ifchanged quinzenal.get_title quinzenal.endDate.year %} 
+        {% ifchanged quinzenal.get_title quinzenal.get_semester quinzenal.endDate.year %} 
           <br><font style="color:{{quinzenal.get_color}}">&#9608;</font> {{quinzenal.get_title}}: 
           {{quinzenal.endDate.day}}/{{quinzenal.endDate.month}}
         {% else %}
@@ -87,7 +126,7 @@
   {% for aula in aulas|dictsort:"endDate" %}
     <span class="ano{{aula.endDate.year}} ano">
       <span class="semestre" data-mes="{{aula.endDate.month}}">
-        {% ifchanged aula.get_title aula.endDate.year %} 
+        {% ifchanged aula.get_title aula.get_semester aula.endDate.year %} 
           <br><font style="color:{{aula.get_color}}">&#9608;</font> {{aula.get_title}}: 
           {{aula.endDate.day}}/{{aula.endDate.month}}
         {% else %}
@@ -104,7 +143,7 @@
       {% if laboratorio.get_title != "Feriado" %}
         <span class="ano{{laboratorio.endDate.year}} ano">
           <span class="semestre" data-mes="{{laboratorio.endDate.month}}">
-            {% ifchanged laboratorio.get_title laboratorio.endDate.year %}   
+            {% ifchanged laboratorio.get_title laboratorio.get_semester laboratorio.endDate.year %}   
               <br><font style="background-image : linear-gradient(to bottom, transparent 80%, {{laboratorio.get_color}} 80%">&nbsp;&nbsp;&nbsp;</font> {{laboratorio.get_title}}: 
               {% if laboratorio.startDate == laboratorio.endDate %} 
                 {{laboratorio.endDate.day}}/{{laboratorio.endDate.month}}
@@ -129,7 +168,7 @@
       {% if prova.get_title != "Feriado" %}
         <span class="ano{{prova.endDate.year}} ano">
           <span class="semestre" data-mes="{{prova.endDate.month}}">
-            {% ifchanged prova.get_title prova.endDate.year %}   
+            {% ifchanged prova.get_title prova.get_semester prova.endDate.year %}   
               <br><font style="background-image : linear-gradient(to bottom, transparent 80%, {{prova.get_color}} 80%">&nbsp;&nbsp;&nbsp;</font> {{prova.get_title}}: 
               {% if prova.startDate == prova.endDate %} 
                 {{prova.endDate.day}}/{{prova.endDate.month}}
@@ -315,15 +354,7 @@
         dayContextMenu: function (e) {
           $(e.element).popover('hide');
         },
-        disabledDays: [
-            new Date(2019,11,23),
-            new Date(2019,11,24),
-            new Date(2019,11,25),
-            new Date(2019,11,26),
-            new Date(2019,11,27),
-            new Date(2019,11,30),
-            new Date(2019,11,31),
-        ],
+        disabledDays: [], {% comment %} Não estou usando por enquanto. {% endcomment %}
         dataSource: [
         {% for evento in eventos %} 
             {
@@ -365,6 +396,18 @@
                 color: "{{evento.get_color}}",
             },
           {% endfor %}
+          {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+            {% for evento in coordenacao %} 
+              {
+                  id: {{evento.id}},
+                  name: "{{evento.get_title}}",
+                  location: "{{evento.location}}",
+                  startDate: new Date({{evento.startDate.year}},{{evento.startDate.month|add:-1}},{{evento.startDate.day}}),
+                  endDate: new Date({{evento.endDate.year}},{{evento.endDate.month|add:-1}},{{evento.endDate.day}}),
+                  color: "{{evento.get_color}}",
+              },
+            {% endfor %}
+          {% endif %}
       ],
       
       customDayRenderer: function(element, date) {
@@ -401,15 +444,21 @@
       });
     });
 
+    var currentYear = 2018; //como se fosse global
+
     document.querySelector('#calendar').addEventListener('yearChanged', function(e) {
       //console.log("New year selected: " + e.currentYear);
+      currentYear = e.currentYear;
       [].forEach.call(document.querySelectorAll('.ano'), function (el) {
         el.style.display = 'none';
       });
       [].forEach.call(document.querySelectorAll('.ano'+e.currentYear), function (el) {
         el.style.display = 'inline';
       });
-    })
+
+      carrega_semestre()
+      
+     })
 
     function primeiro(e) {
       //console.log("Semestre selected: 1");
@@ -422,11 +471,24 @@
       [].forEach.call(els, function (el) {
         el.style.display = 'inline';
       });
+
+      {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+        //console.log("Semestre coordenacao selected: 1 em " + currentYear);
+        [].forEach.call(document.querySelectorAll('.coordenacao'), function (el) {
+          el.style.display = 'none';
+        });
+        var els = Array.from(document.querySelectorAll(".coordenacao[data-mes]")).filter(el => Number(el.dataset.mes) <= 8);
+        var els = els.filter(el => Number(el.dataset.mes) >= 3);
+        var els = els.filter(el => Number(el.dataset.ano) == currentYear);
+        [].forEach.call(els, function (el) {
+          el.style.display = 'inline';
+        });
+      {% endif %}
     }
     document.querySelector('#primeiro_semestre').addEventListener('click', primeiro)
 
     function segundo(e) {
-      //console.log("Semestre selected: 2");
+      //console.log("Semestre selected: 2 em " + currentYear);
       document.getElementById("primeiro_semestre").style.fontWeight = "normal";
       document.getElementById("segundo_semestre").style.fontWeight = "bold";
       [].forEach.call(document.querySelectorAll('.semestre'), function (el) {
@@ -436,11 +498,34 @@
       [].forEach.call(els, function (el) {
         el.style.display = 'inline';
       });
+
+      {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+        //console.log("Semestre coordenacao selected: 2 em " + currentYear);
+        [].forEach.call(document.querySelectorAll('.coordenacao'), function (el) {
+          el.style.display = 'none';
+        });
+        
+        var els = Array.from(document.querySelectorAll(".coordenacao[data-mes]")).filter(el => Number(el.dataset.mes) > 8);
+        var els = els.filter(el => Number(el.dataset.ano) == currentYear);
+        [].forEach.call(els, function (el) {
+          el.style.display = 'inline';
+        });
+
+        var els = Array.from(document.querySelectorAll(".coordenacao[data-mes]")).filter(el => Number(el.dataset.mes) < 3);
+        var els = els.filter(el => Number(el.dataset.ano) == currentYear+1);
+        [].forEach.call(els, function (el) {
+          el.style.display = 'inline';
+        });
+
+      {% endif %}
+
     }
     document.querySelector('#segundo_semestre').addEventListener('click',segundo)
 
-    window.onload = function() {
-      //console.log("{{semestre}}");
+    window.onload = carrega_semestre
+    
+    function carrega_semestre() {
+      //console.log("semestre: {{semestre}}");
       {% if semestre == 1 %}
         primeiro()
       {% else %}
