--- a/projetos/templates/projetos/organizacao_completo.html
+++ b/projetos/templates/projetos/organizacao_completo.html
@@ -139,13 +139,15 @@
       </a>
     {% endfor %}
   {% endif %}
-
+  
+  <hr>
+  <h3>Anotações <a href="{% url 'cria_anotacao' organization.login %}">&#10133;</a></h3>
   {% if organization.anotacao_set.all %}
-    <hr>
-    <h3>Anotações <a href="{% url 'cria_anotacao' organization.login %}">&#10133;</a></h3>
     {% for anotacao in organization.anotacao_set.all|dictsortreversed:"data" %}
       {{anotacao.autor.get_full_name}} [{{anotacao.data}}] : {{anotacao.texto}}<br>
     {% endfor %}
+  {% else %}
+    Ainda não existem anotações para essa organização.
   {% endif %}
 
 {% endblock %}
