--- a/projetos/templates/projetos/organizacoes_lista.html
+++ b/projetos/templates/projetos/organizacoes_lista.html
@@ -14,7 +14,9 @@
   {% if organizacoes_list %}
     <table id="OrganizacoesTable">
       <tr>
+      {% comment %}
         <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Sigla</th>
+      {% endcomment %}
         <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Organização</th>
         <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Desde</th>
         <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Projetos <br>Submetidos</th>
@@ -22,11 +24,13 @@
       </tr>
       {% for organizacao,fechados,desde in organizacoes_list %} 
         <tr class="item">
+        {% comment %}
           <td>
             <a href="{% url 'organizacao_completo' organizacao.login %}"> <!-- UM DIA ACERTAR ISSO -->
               {{organizacao.sigla}}
             </a>
           </td>
+        {% endcomment %}
           <td>
             <a href="{% url 'organizacao_completo' organizacao.login %}"> <!-- UM DIA ACERTAR ISSO -->
               {{organizacao.nome_empresa}}
