--- a/projetos/templates/projetos/organizacoes_lista.html
+++ b/projetos/templates/projetos/organizacoes_lista.html
@@ -19,10 +19,11 @@
       {% endcomment %}
         <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Organização</th>
         <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Desde</th>
-        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Projetos <br>Submetidos</th>
-        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Projetos <br>Fechados</th>
+        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Último<br>Contato</th>
+        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Projetos<br>Enviados</th>
+        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Projetos<br>Fechados</th>
       </tr>
-      {% for organizacao,fechados,desde in organizacoes_list %} 
+      {% for organizacao,fechados,desde,contato in organizacoes_list %} 
         <tr class="item">
         {% comment %}
           <td>
@@ -38,6 +39,9 @@
           </td>
           <td>
             {{desde}}
+          </td>
+          <td>
+            {{contato|date:"m/Y"}}
           </td>
           <td class="text-center">
             {{organizacao.projeto_set.count|stringformat:"03d"}}
