link para o formulário de avaliação

--- a/projetos/templates/projetos/bancas_lista.html
+++ b/projetos/templates/projetos/bancas_lista.html
@@ -65,7 +65,8 @@
             <br>
           {% endif %}
 
-          <a href="/projetos/avaliacao/{{banca.projeto.id}}"><b>Link formulário de avaliação</b></a><br>
+          <br>
+          <b>Link formulário de avaliação</b>: <a href="/projetos/avaliacao/{{banca.projeto.id}}">{{ request.get_host }}{% url 'avaliacao' banca.projeto.id %}</a><br>
 
           <br>
           {% if banca.projeto.orientador %}
