--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -75,7 +75,7 @@
 
   {% if projeto.orientador %}
   <hr>
-  <h3>Orientador(a): </h3>
+  <h3>Orientador{% if projeto.orientador.user.genero == "F" %}a{% endif %}: </h3>
   &nbsp;
   <a href="{% url 'professor_detail' projeto.orientador.id %}">
     {{projeto.orientador.user.get_full_name}}
