--- a/projetos/templates/projetos/avaliacao.html
+++ b/projetos/templates/projetos/avaliacao.html
@@ -35,7 +35,20 @@
       <b>Título do Projeto:</b> {{projeto.titulo}}<br>
       <b>Organização:</b> {{projeto.empresa}}<br>
       <b>Orientador{% if projeto.orientador.user.genero == "F" %}a{% endif %}:</b> {{projeto.orientador}}<br>
-      <br>
+      <b>Alunos:</b>
+      <ul>
+        {% for alocacao in banca.projeto.alocacao_set.all %}
+          <li>
+            {% comment %} <a href="{% url 'aluno_detail' alocacao.aluno.id %}">{% endcomment %} 
+              {{alocacao.aluno.user.get_full_name}}
+            {% comment %} </a>
+            <a href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a>
+            {% endcomment %} 
+            [{{ alocacao.aluno.get_curso_display }}]
+          </li>
+        {% endfor %}
+      </ul>
+
       <b>Banca:</b>
       {% if banca.tipo_de_banca == 0 %}Final{% else %}Intermediária{% endif %}
       {% comment %}
@@ -54,7 +67,6 @@
         <br>
       {% endif %}
       
-
       <br><b>Avaliador(a)</b>:
       <select name="avaliador" id="avaliador" title="Selecione avaliador da banca" required>
           <option disabled selected value> -- selecione um avaliador -- </option>
