--- a/projetos/templates/projetos/organizacao_completo.html
+++ b/projetos/templates/projetos/organizacao_completo.html
@@ -143,7 +143,7 @@
   <hr>
   <h3>Anotações <a href="{% url 'cria_anotacao' organization.login %}">&#10133;</a></h3>
   {% if organization.anotacao_set.all %}
-    {% for anotacao in organization.anotacao_set.all|dictsortreversed:"data" %}
+    {% for anotacao in organization.anotacao_set.all|dictsortreversed:"momento" %}
       {{anotacao.autor.get_full_name}} [{{anotacao.momento.date}}] : {{anotacao.texto}}<br>
     {% endfor %}
   {% else %}
